feat: 增加部分可用环境变量
